# agent-atelier

./: .env.example  .gitattributes  .gitignore  ASSET_CREDITS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  HOW_TO_PREVIEW.md  OPEN_AGENT_ATELIER.bat  OPEN_AGENT_ATELIER_REAL.bat  README.es.md  README.md  SECURITY.md  VERIFY_AGENT_ATELIER.bat  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  learning_proposal.yml
.github/workflows/: quality.yml
assets/audio/: LICENSES.md  README.md
design/: generate_audio.py  tokens.css  tokens.json
docs/: CHAPTER_MATRIX.md  CURRICULUM_QA.md  DESIGN_STORY.md  INTERVIEW_GUIDE.es.md  INTERVIEW_GUIDE.md  QA_STATUS.md  REAL_PROVIDER.es.md  REAL_PROVIDER.md
docs/architecture/: overview.md
docs/decisions/: 0001-framework-independent-core.md  0002-deterministic-evaluation.md  0003-tool-contracts.md  0004-memory-lifetimes.md  0005-safe-observability.md  0006-untrusted-content-boundary.md  0007-scoped-approvals.md  0008-abstract-cost-units.md  0009-progressive-integrated-view.md  0010-local-preview-and-cooperative-timeout.md
scripts/: release_audit.py  start_real_provider.ps1
src/agent_atelier/: __init__.py  (+17 more)
tests/: test_approvals.py  test_costs.py  test_engine.py  test_evaluation.py  test_final_app.py  test_guardrails.py  test_i18n.py  test_learning_path.py  test_memory.py  test_observability.py  test_planning.py  test_preview.py  test_real_provider.py  test_tools.py
web/: app.js  audio.js  index.html  study-content.js  styles.css  workshop.js
(+24 files in other folders)
